pictor (2.38) unreleased; urgency=medium

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 21 Jan 2017 09:23:08 -0500

pictor (2.37-0ubuntu1) zesty; urgency=medium

  * index.php:
    - update copyright to 2017
    - dynamically generate copyright printed in footer
    - move everything to the top, rather than center
    - add thumbnail pagination support
    - track the thumbnail "page" we're on
    - track the number of thumbnails for page (50, by default)
    - remove some unnecessary HTML, simplify tables
    - display all exif data, rather than just some
    - make our banner printing more consistent, navigable
    - fix a couple of undefined variable errors
    - disable batch transcoding of video
    - disable video transcoding, not working well
    - fix counting of thumbnails, use min for last page
    - improve the next/previous thumbnail buttons

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 21 Jan 2017 09:23:07 -0500

pictor (2.36-0ubuntu1) yakkety; urgency=medium

  * debian/pictor.install:
    - install /usr/bin/pictor-thumbs
  * pictor-thumbs:
    - make sure we find the right php binary
  * debian/pictor.cron.hourly => debian/pictor.cron.daily:
    - move the cronjob to daily, rather than hourly

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 02 Oct 2016 15:36:58 -0500

pictor (2.35-0ubuntu1) xenial; urgency=medium

  [ Nishanth Aravamudan ]
  * debian/control, index.php: LP: #1549942
    - Update to PHP7.0 dependencies

  [ Dustin Kirkland ]
  * debian/control:
    - maintain php5 compat for the php

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 09 Mar 2016 18:14:44 -0500

pictor (2.34-0ubuntu1) xenial; urgency=medium

  * debian/control:
    - move deps to 1 per line
  * debian/pictor.cron.hourly
    - call the new pictor-thumbs binary
  * index.php:
    - add a batch mode
    - fix an array init error
  * pictor-rename:
    - check suffixes
  * pictor-thumbs:
    - create a new script to batch create thumbnails