@@ -1,6 +1,9 @@
 pictor (2.38) unreleased; urgency=medium
 
-  * UNRELEASED
+  * index.php:
+    - remove description support; no longer relevant
+    - fix formatting
+    - pretty print tables
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 21 Jan 2017 09:23:08 -0500
 
